--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "*.xdc": "verilog",
         "mqtt_client.h": "c",
         "esp_crt_bundle.h": "c",
-        "esp_transport.h": "c"
+        "esp_transport.h": "c",
+        "dht.h": "c"
     }
 }
